@@ -47,3 +47,5 @@ glucoseC6H12O6 = <html>Glucose<br>C<sub>6</sub>H<sub>12</sub>O<sub>6</sub></html
 spaceFill = Space fill
 ballAndStick = Ball and stick
 loading=Loading...
+removeSalt=Remove salt
+removeSugar=Remove sugar
