@@ -7,6 +7,9 @@ import edu.colorado.phet.sugarandsaltsolutions.common.view.RemoveSoluteButtonNod
 import edu.colorado.phet.sugarandsaltsolutions.macro.model.MacroModel;
 import edu.umd.cs.piccolo.PNode;
 
+import static edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsResources.Strings.REMOVE_SALT;
+import static edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsResources.Strings.REMOVE_SUGAR;
+
 /**
  * Node that contains one button to remove salt (if there is any salt) and another button for sugar.
  *
@@ -17,7 +20,7 @@ public class RemoveSoluteControlNode extends PNode {
     public RemoveSoluteControlNode( final MacroModel model ) {
 
         //Button to remove salt, only shown if there is any salt
-        RemoveSoluteButtonNode saltButton = new RemoveSoluteButtonNode( "Remove salt", model.isAnySaltToRemove(), new VoidFunction0() {
+        RemoveSoluteButtonNode saltButton = new RemoveSoluteButtonNode( REMOVE_SALT, model.isAnySaltToRemove(), new VoidFunction0() {
             public void apply() {
                 model.removeSalt();
             }
@@ -25,7 +28,7 @@ public class RemoveSoluteControlNode extends PNode {
         addChild( saltButton );
 
         //Button to remove sugar, only shown if there is any sugar
-        RemoveSoluteButtonNode sugarButton = new RemoveSoluteButtonNode( "Remove sugar", model.isAnySugarToRemove(), new VoidFunction0() {
+        RemoveSoluteButtonNode sugarButton = new RemoveSoluteButtonNode( REMOVE_SUGAR, model.isAnySugarToRemove(), new VoidFunction0() {
             public void apply() {
                 model.removeSugar();
             }
